# aster

./: CMakeLists.txt
contrib/kittens/test/bench/: bench_harness.py
contrib/mlir-air/: CMakeLists.txt
contrib/mlir-air/lib/: AirToAMDGCN.cpp  ConvertAirChannelToAMDGCN.cpp  ConvertLinalgToAMDGCN.cpp  ConvertMemSpaceToAMDGCN.cpp  ConvertToAMDGCNLibraryCalls.cpp  Init.cpp
contrib/mlir-air/test/: air-to-amdgcn-matmul-padded-transform.mlir  air-to-amdgcn-matmul-padded.mlir  air-to-amdgcn-matmul.mlir
contrib/mlir-air/test/integration/: test_air_matmul_e2e.py  test_linalg_matmul_e2e.py
tools/aster-shlib/: CMakeLists.txt
